Changes for 2.3.2

New features:

Bug fixes:
A.F....... [ZBX-5567] removed parameter "not_proxy_hosts" from hostgroup.get API method and frontend code (Krists)
..F....... [ZBX-8271] fixed importing of maps with LLD discovered hosts (Andrejs)

--------------------------------------------------------------------------------
Changes for 2.3.1

New features:
A.F....PS. [ZBXNEXT-282] implemented additional options and HTTP header support for web scenarios (dimir, Krists)
.......PS. [ZBXNEXT-2254] DBSchema configuration parameter now applies to PostgreSQL as well as IBM DB2 (Juris)
A.F....... [ZBX-1357] updated Japanese, Slovak and Spanish translations; thanks to Zabbix translators (Richlv)

Bug fixes:
..F....... [ZBX-8276] fixed latest data filtering by name (Ivo)
A......... [ZBX-8195] fixed web scenario step validation for httptest.create and httptest.update API methods (Krists)
...G...PS. [ZBX-8172] fixed translation of \uxxxx sequences in JSON string values (wiper)
..F....... [ZBX-8241] fixed duplicate display of actions in media type list (Andrejs)
A.F....... [ZBX-8194] improved validation for web scenarios and web steps (Ivo, Krists)
...G...... [ZBX-8269] fixed processing of active checks in agent (Andris)
...G...... [ZBX-8238] fixed updating agent 'mtime' for logrt[] items; thanks to Yoshinori Komuro for patch (Andris)
..F....... [ZBX-7535] trivial change from 'Link' to 'URL' in error messages (Andrejs)
..F....... [ZBX-8259] fixed padding for widgets in screen (Andrejs)
........S. [ZBX-8143] triggers are now committed to the database individually when setting to an unknown state to avoid potential locking between the poller and history syncer (Juris)
.......P.. [ZBX-7968] fixed bug when proxy stopped sending history data if it had more than 1000 unmonitored item values in history table; thanks to Corey Shaw for identifying the issue and providing a patch (wiper)
..F....... [ZBX-8221] corrected labels while copying items (Andrejs)