@@ -496,7 +496,7 @@ else {
 
 	// sorting && paging
 	order_result($data['actions'], $sortfield, getPageSortOrder());
-	$data['paging'] = getPagingLine($data['actions'], array('actionid'));
+	$data['paging'] = getPagingLine($data['actions']);
 
 	// render view
 	$actionView = new CView('configuration.action.list', $data);
