@@ -377,14 +377,7 @@ else {
 
 	order_result($data['items'], $sortfield, getPageSortOrder());
 
-	$data['paging'] = getPagingLine(
-		$data['items'],
-		array('itemid'),
-		array(
-			'hostid' => get_request('hostid'),
-			'parent_discoveryid' => get_request('parent_discoveryid')
-		)
-	);
+	$data['paging'] = getPagingLine($data['items']);
 
 	// render view
 	$itemView = new CView('configuration.item.prototype.list', $data);
