@@ -19,7 +19,7 @@
 **/
 
 
-class Curl {
+class CUrl {
 
 	private $url;
 	protected $reference;
@@ -66,6 +66,7 @@ class Curl {
 
 	public function formatGetArguments() {
 		$this->arguments = $_GET;
+
 		if (isset($_COOKIE['zbx_sessionid'])) {
 			$this->setArgument('sid', substr($_COOKIE['zbx_sessionid'], 16, 16));
 		}
@@ -142,5 +143,15 @@ class Curl {
 
 	public function toString() {
 		return $this->getUrl();
+	}
+
+	public function getArguments()
+	{
+		return $this->arguments;
+	}
+
+	public function setArguments($arguments)
+	{
+		$this->arguments = $arguments;
 	}
 }
