@@ -38,7 +38,7 @@ function zbx_is_callable(array $names) {
 
 /************ REQUEST ************/
 function redirect($url) {
-	$curl = new Curl($url);
+	$curl = new CUrl($url);
 	$curl->setArgument('sid', null);
 	header('Location: '.$curl->getUrl());
 	exit;
@@ -1433,15 +1433,13 @@ function validate_sort_and_sortorder($sort = null, $sortorder = ZBX_SORT_UP) {
 }
 
 // creates header col for sorting in table header
-function make_sorting_header($obj, $tabfield, $url = '') {
+function make_sorting_header($obj, $tabfield) {
 	global $page;
 
 	$sortorder = ($_REQUEST['sort'] == $tabfield && $_REQUEST['sortorder'] == ZBX_SORT_UP) ? ZBX_SORT_DOWN : ZBX_SORT_UP;
 
-	$link = new Curl($url);
-	if (empty($url)) {
-		$link->formatGetArguments();
-	}
+	$link = CUrlFactory::getContextUrl();
+
 	$link->setArgument('sort', $tabfield);
 	$link->setArgument('sortorder', $sortorder);
 
@@ -1536,12 +1534,10 @@ function getPageNumber() {
  * Returns paging line.
  *
  * @param array $items				list of items
- * @param array $removeUrlParams	params to remove from URL
- * @param array $urlParams			params to add in URL
  *
  * @return CTable
  */
-function getPagingLine(&$items, array $removeUrlParams = array(), array $urlParams = array()) {
+function getPagingLine(&$items) {
 	global $page;
 
 	$config = select_config();
@@ -1591,18 +1587,7 @@ function getPagingLine(&$items, array $removeUrlParams = array(), array $urlPara
 	$table = null;
 
 	if ($pagesCount > 1) {
-		$url = new Curl();
-
-		if (is_array($urlParams) && $urlParams) {
-			foreach ($urlParams as $key => $value) {
-				$url->setArgument($key, $value);
-			}
-		}
-
-		$removeUrlParams = array_merge($removeUrlParams, array('go', 'form', 'delete', 'cancel'));
-		foreach ($removeUrlParams as $param) {
-			$url->removeArgument($param);
-		}
+		$url = CUrlFactory::getContextUrl();
 
 		if ($startPage > 1) {
 			$url->setArgument('page', 1);
