@@ -43,15 +43,11 @@ $itemForm->addVar('parent_discoveryid', $this->data['parent_discoveryid']);
 // create table
 $hostTable = new CTableInfo(_('No host prototypes found.'));
 
-$sortLink = new CUrl();
-$sortLink->setArgument('parent_discoveryid', $this->data['parent_discoveryid']);
-$sortLink = $sortLink->getUrl();
-
 $hostTable->setHeader(array(
 	new CCheckBox('all_hosts', null, "checkAll('".$itemForm->getName()."', 'all_hosts', 'group_hostid');"),
-	make_sorting_header(_('Name'),'name', $sortLink),
+	make_sorting_header(_('Name'),'name'),
 	_('Templates'),
-	make_sorting_header(_('Status'),'status', $sortLink)
+	make_sorting_header(_('Status'),'status')
 ));
 
 foreach ($this->data['hostPrototypes'] as $hostPrototype) {
