@@ -270,11 +270,11 @@ else {
 
 		// sorting & paging
 		order_result($data['mediatypes'], getPageSortField('description'), getPageSortOrder());
-		$data['paging'] = getPagingLine($data['mediatypes'], array('mediatypeid'));
+		$data['paging'] = getPagingLine($data['mediatypes']);
 	}
 	else {
 		$arr = array();
-		$data['paging'] = getPagingLine($arr, array('mediatypeid'));
+		$data['paging'] = getPagingLine($arr);
 	}
 
 	// render view
