@@ -465,7 +465,7 @@ else {
 
 	// sorting & paging
 	order_result($data['usergroups'], $sortfield, getPageSortOrder());
-	$data['paging'] = getPagingLine($data['usergroups'], array('usrgrpid'));
+	$data['paging'] = getPagingLine($data['usergroups']);
 
 	// render view
 	$userGroupsView = new CView('administration.usergroups.list', $data);
